# uperf

./: .clang-format  12700K_Big.txt  CMakeLists.txt  LICENSE  README.md  arch.h  assemble.cpp  assemble.h  clock.h  gen.h  gen_aarch64.h  gen_amd64.h  graphview.py  insipc.cpp  osutils.h  pat_config.cpp  pat_config.h  phyreg.cpp  requirements.txt  rob.cpp  testcase.h  uperf.cpp  uperf.h  uperf_dispatch.cpp  uperf_dispatch2.cpp  uperf_inst.cpp
archs/: CMakeLists.txt  aarch64.cpp  archbase.cpp  archbase.h  x86.cpp
osutils/: CMakeLists.txt  osutils_mac.cpp  osutils_win.cpp
patterns/: default.pat  defaultX86.pat
testResult/: 12700K_Big.txt  M2.txt  Ryzen4650G.txt  SurfaceBig.txt
