cmake_minimum_required(VERSION 3.4.1)
project(uperf)

set(CMAKE_CXX_STANDARD 11)
aux_source_directory(./ SRCS)
add_subdirectory(osutils)
foreach(SRC ${SRCS})
    STRING(REGEX REPLACE ".+/(.+)\\..*" "\\1" EXEC ${SRC})
    message(STATUS "Find file: ${SRC}")
    add_executable(${EXEC} ${SRC})
    target_link_libraries(${EXEC} osutils)
endforeach()
